EPNG-4507 Update some of my answers

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -29,10 +29,9 @@ So I was curious to find out why they are so exited about it.
 Beside this I think it is a good idea in general to visit one conference per year for the sake of professional growth.
 
 **Oliver**:
-Additionally I wanted to see how other developers keep up with cutting-edge computer science research topics and include such findings in their day-to-day work.
-
-I pushed for and contributed to an "Evil Arts of Communication" session.
-... Also I wanted to "test-drive" my "How to teleport" talk.
+Each year I draw a lot of inspiration from the SoCraTes.
+There are so many different people from all walks of life attending, that I always get to see a new perspective!
+Before the conference and during the World Café, I explored and proposed a couple of ideas that resonated well resulting in valuable feedback over the course of the conference!
 
 
 ## What was your favorite session?
@@ -77,7 +76,7 @@ Also I will try out some of the static analysis tools recommended in the "Unknow
 **Oliver**:
 I will definitely boot up the [OWASP Juice Shop](https://www.owasp.org/index.php/OWASP_Juice_Shop_Project) again and try to exploit the majority of issues it is illustrating.
 The (professional) "life hacks" lunch session inspired me to structure and write down my own life hacks.
-Last but not least I got really great feedback for my first "How to Teleport" talk, so I will close some loose ends and later publish an improved article online.
+Last but not least I got really great feedback for my first "How to Teleport" talk, so I will join some loose ends and later publish an improved article online.
 
 
 ## What was your biggest surprise?
@@ -97,7 +96,7 @@ Also "Human Tetris" is a tough problem and great fun! 😉
 Before you go to the conference, think about what you want to learn.
 
 **Oliver**:
-Reach out to as many people as possible and try to attend plenty of sessions! Try to sit with different people!
-If you are unhappy with how a session evolved, use the [Law of Two Feet](), relax or contribute somewhere else!
+Reach out to as many people as possible and try to attend plenty of sessions! Sit with people you do not know, yet!
+If you are unhappy with how a session evolved, use the ["Law of Two Feet"](https://en.wikiversity.org/wiki/Open_Space_Technology#Law_of_Two_Feet)!
 
 But most of all: be prepared to be surprised!
