EPNG-4507 Flesh out answer to last open question

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -61,7 +61,12 @@ One was a discussion about approaches for learning new technologies.
 The other was a presentation of the architectural prototype of a personal open-source project of mine.
 
 **Oliver**:
-Remote work and robots, software developer self-care, an intro to stoicism, a personal kanban follow-up from last year (show and share), drawing without symbols (see with your eyes, not with your brain), the human side of software, hacking the Juice Shop, the mindset, gaining more quality of life throughout your work life, cloud testing, CI extreme, life hacks, dyad meditation
+I attended various "soft" sessions on remote work, software developer self-care, the human side of software, and gaining more quality of life throughout work life. In one session we followed-up on the Personal Kanban introduction from last year and shared our experiences and board setups.
+
+Hearing about stoicism, I concluded that I am on a pretty good path already.
+Performing dyad meditation was a new experience and I learned that growth/fixed mindsets do not just apply to a person as a whole, but also to individual pursued activities!
+
+On the technical side I attended sessions on cloud testing, extreme continuous integration and practiced two katas.
 
 
 ## What key learnings do you want to apply in the near future?
