EPNG-4507 Polish details

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -39,7 +39,7 @@ Before the conference and during the World Café, I explored and proposed a coup
 **Jan**:
 My favorite session had the title "Broken World".
 It was lead by a QA consultant who argued that life is still great even though things may be broken.
-The discussion ended with the conclusion that detachment helps in coping with system failures which are unavoidable.
+The discussion ended with the conclusion that detachment helps in coping with unavoidable system failures.
 Another interesting insight was the observation that every crisis is also a trigger for innovation.
 
 **Oliver**:
@@ -51,10 +51,10 @@ We shared stories where we identified manipulative behavior of colleagues rangin
 
 **Jan**:
 One of the other sessions I attended was about assessing the quality of unknown code bases.
-It started with a demonstration how the different dimensions of a code base can be analyzed with Code Chalta.
-Further it included tips how to approach structural problems with the Technical Dept Quadrant model and a list of static analysis tools.
+It started with a demonstration how the different dimensions of a code base can be analyzed with [CodeCharta](https://maibornwolff.github.io/codecharta/).
+Further it included tips how to approach structural problems with the [Technical Dept Quadrant](https://martinfowler.com/bliki/TechnicalDebtQuadrant.html) model and a list of static analysis tools.
 
-The others were about soft skills like taking sketch notes, the human factors of software development, and self-care.
+The others were about soft skills like taking sketch notes, the human factors in software development, and self-care.
 
 Also I lead two sessions by myself.
 One was a discussion about approaches for learning new technologies.
@@ -74,9 +74,9 @@ On the technical side I attended sessions on cloud testing, extreme continuous i
 **Jan**:
 Inspired by the "Broken World" session I will try to improve spending my energy to fix the right things and accept those beyond my control.
 
-From the conversations beside the session I could derive a lot of ideas, e.g. trying out the Google Design Sprint concept during a Hackathon and digging deeper into the Hexagonal Architecture model.
+From the conversations beside the session I could derive a lot of ideas, e.g. trying out the [Design Sprint](http://www.gv.com/sprint/) concept during a Hackathon and gaining a better understanding of the [Hexagonal Architecture](http://wiki.c2.com/?HexagonalArchitecture) model.
 
-Also I will try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. Code Chalta, OWASP Dependency Check, codemmat, and Structure 101.
+Also I will try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. [CodeCharta](https://maibornwolff.github.io/codecharta/), [OWASP Dependency Check](https://www.owasp.org/index.php/OWASP_Dependency_Check), and [code-maat](https://github.com/adamtornhill/code-maat).
 
 **Oliver**:
 I will definitely boot up the [OWASP Juice Shop](https://www.owasp.org/index.php/OWASP_Juice_Shop_Project) again and try to exploit the majority of issues it is illustrating.
