Add review annotations

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -11,27 +11,28 @@ authors: ["Jan M.", "Oliver Z."]
 about_authors: ["jmewes", "ozscheyge"]
 ---
 
-The SoCraTes is an Open Space conference dedicated to software craft and testing.
+The [SoCraTes](https://www.socrates-conference.de/home){:target="_blank"} is an Open Space conference dedicated to software craft and testing.
 This year, 215 participants from 17 countries gathered on the last weekend of August in Soltau, Germany.
-To kickoff the (un-)conference everyone collected ideas, suggestions, and wishes in a [World Café](https://en.wikipedia.org/wiki/World_caf%C3%A9).
+To kick off the (un-)conference, everyone collected ideas, suggestions, and wishes in a [World Café](https://en.wikipedia.org/wiki/World_caf%C3%A9){:target="_blank"}.
 Being an Open Space conference, the sessions were suggested each morning by the attendees and distributed across 15 tracks.
 There were informal discussions, presentations, workshops, and a lot of hallway chat.
-The very diverse topics ranged from Agile methodologies, to collaboration in general, to software development best practices, to web security, to games, to nail polish.
+The very diverse topics ranged from agile methodologies, to collaboration in general, to software development best practices, to web security, to games, to nail polish.
 
-Two ePages developers joined this year's conference.
-Jan participated for the first time and Oliver is already a SoCraTes regular with three attended conferences.
+Two ePagees joined this year's conference.
+Jan participated for the first time, and Oliver is already a SoCraTes regular with three attended conferences.
+We've had a little Q&A with them to give you some insights of the conference and share their impressions.
 
 ## Why did you go to the SoCraTes 2018?
 
 **Jan**:
-The SoCraTes was recommended to me as the best conference from two people who go to a lot of conferences.
-So I was curious to find out why they are so exited about it.
-Beside this I think it is a good idea in general to visit one conference per year for the sake of professional growth.
+The SoCraTes was recommended to me as "the best conference" from two people who participate in a lot of conferences.
+So, I was curious to find out why they are so exited about it.
+Beside this, I think it is always a good idea to visit one conference per year for the sake of professional growth.
 
 **Oliver**:
 Each year I draw a lot of inspiration from the SoCraTes.
-There are so many different people from all walks of life attending, that I always get to see a new perspective!
-Before the conference and during the World Café, I explored and proposed a couple of ideas that resonated well resulting in valuable feedback over the course of the conference!
+There are so many different people from all walks of life attending, so I always get to see a new perspective!
+Before the conference and during the World Café, I explored and proposed a couple of ideas that resonated well, resulting in valuable feedback over the course of the conference!
 
 
 ## What was your favorite session?
@@ -44,44 +45,44 @@ Another interesting insight was the observation that every crisis is also a trig
 
 **Oliver**:
 Over lunch we collectively gathered "Evil Arts of Communication", things you do not normally hear in soft skill trainings for developers.
-We shared stories where we identified manipulative behavior of colleagues ranging from using logical fallacies to Neural Linguistic Programming techniques.
+We shared stories where we identified manipulative behavior of colleagues, ranging from using logical fallacies to Neural Linguistic Programming techniques.
 
 
 ## Which other sessions did you attend?
 
 **Jan**:
 One of the other sessions I attended was about assessing the quality of unknown code bases.
-It started with a demonstration how the different dimensions of a code base can be analyzed with [CodeCharta](https://maibornwolff.github.io/codecharta/).
-Further it included tips how to approach structural problems with the [Technical Dept Quadrant](https://martinfowler.com/bliki/TechnicalDebtQuadrant.html) model and a list of static analysis tools.
+It started with a demonstration of how the different dimensions of a code base can be analyzed with [CodeCharta](https://maibornwolff.github.io/codecharta/){:target="_blank"}.
+Further, it included tips how to approach structural problems with the [Technical Dept Quadrant](https://martinfowler.com/bliki/TechnicalDebtQuadrant.html){:target="_blank"} model and a list of static analysis tools.
 
-The others were about soft skills like taking sketch notes, the human factors in software development, and self-care.
+The others dealt with soft skills like taking sketch notes, the human factors in software development, and self-care.
 
-Also I lead two sessions by myself.
-One was a discussion about approaches for learning new technologies.
-The other was a presentation of the architectural prototype of a personal open-source project of mine.
+Also, I led two sessions myself:
+- a discussion about approaches for learning new technologies
+- a presentation of the architectural prototype of a personal open-source project
 
 **Oliver**:
-I attended various "soft" sessions on remote work, software developer self-care, the human side of software, and gaining more quality of life throughout work life. In one session we followed-up on the Personal Kanban introduction from last year and shared our experiences and board setups.
+I attended various "soft" sessions on remote work, software developer self-care, the human side of software, and gaining more quality of life throughout work life. In one session, we followed up on the Personal Kanban introduction from last year and shared our experiences and board setups.
 
 Hearing about stoicism, I concluded that I am on a pretty good path already.
 Performing dyad meditation was a new experience and I learned that growth/fixed mindsets do not just apply to a person as a whole, but also to individual pursued activities!
 
-On the technical side I attended sessions on cloud testing, extreme continuous integration and practiced two katas.
+On the technical side, I practiced two katas, and attended sessions on cloud testing as well as extreme continuous integration.
 
 
 ## What key learnings do you want to apply in the near future?
 
 **Jan**:
-Inspired by the "Broken World" session I will try to improve spending my energy to fix the right things and accept those beyond my control.
+Inspired by the "Broken World" session, I will try to use my energy to fix the right things, and accept those beyond my control.
 
-From the conversations beside the session I could derive a lot of ideas, e.g. trying out the [Design Sprint](http://www.gv.com/sprint/) concept during a Hackathon and gaining a better understanding of the [Hexagonal Architecture](http://wiki.c2.com/?HexagonalArchitecture) model.
+From the conversations beside the session, I derived a lot of ideas, e.g. trying out the [Design Sprint](http://www.gv.com/sprint/){:target="_blank"} concept during a Hackathon, and gained a better understanding of the [Hexagonal Architecture](http://wiki.c2.com/?HexagonalArchitecture){:target="_blank"} model.
 
-Also I will try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. [CodeCharta](https://maibornwolff.github.io/codecharta/), [OWASP Dependency Check](https://www.owasp.org/index.php/OWASP_Dependency_Check), and [code-maat](https://github.com/adamtornhill/code-maat).
+Also, I will try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. [CodeCharta](https://maibornwolff.github.io/codecharta/){:target="_blank"}, [OWASP Dependency Check](https://www.owasp.org/index.php/OWASP_Dependency_Check){:target="_blank"}, and [code-maat](https://github.com/adamtornhill/code-maat){:target="_blank"}.
 
 **Oliver**:
-I will definitely boot up the [OWASP Juice Shop](https://www.owasp.org/index.php/OWASP_Juice_Shop_Project) again and try to exploit the majority of issues it is illustrating.
+I will definitely boot up the [OWASP Juice Shop](https://www.owasp.org/index.php/OWASP_Juice_Shop_Project){:target="_blank"} again, and try to exploit the majority of issues it is illustrating.
 The (professional) "life hacks" lunch session inspired me to structure and write down my own life hacks.
-Last but not least I got really great feedback for my first "How to Teleport" talk, so I will join some loose ends and later publish an improved article online.
+Last but not least, I received really great feedback for my first "How to Teleport" talk, so I will join some loose ends, and later publish an improved article online.
 
 
 ## What was your biggest surprise?
@@ -90,8 +91,8 @@ Last but not least I got really great feedback for my first "How to Teleport" ta
 Having gender neutral bathrooms did not feel so weird after all.
 
 **Oliver**:
-I was humbled to see, when we were instructed to draw "with our eyes only", how much our brain pre-interprets our perception of reality.
-A huge "Aha!"-moment struck me, when we used Liskov substitution, covariance and contravariance to iteratively reduce code base complexity. I will need to practice this more often!
+When we were instructed to draw "with our eyes only", I was humbled to see how much our brain pre-interprets our perception of reality.
+A huge "Aha!"-moment struck me, when we used Liskov substitution, covariance, and contravariance to iteratively reduce code base complexity. I will need to practice this more often!
 Also "Human Tetris" is a tough problem and great fun! 😉
 
 
@@ -101,7 +102,7 @@ Also "Human Tetris" is a tough problem and great fun! 😉
 Before you go to the conference, think about what you want to learn.
 
 **Oliver**:
-Reach out to as many people as possible and try to attend plenty of sessions! Sit with people you do not know, yet!
-If you are unhappy with how a session evolved, use the ["Law of Two Feet"](https://en.wikiversity.org/wiki/Open_Space_Technology#Law_of_Two_Feet)!
+Reach out to as many people as possible, and try to attend plenty of sessions! Sit with people you do not know, yet!
+If you are unhappy with how a session evolved, use the ["Law of Two Feet"](https://en.wikiversity.org/wiki/Open_Space_Technology#Law_of_Two_Feet){:target="_blank"}!
 
 But most of all: be prepared to be surprised!
