Correct path for header image.

--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -2,7 +2,7 @@
 layout: post
 title: ePages RnD Day 2018
 date: 2018-09-18
-header_image: private/wtd-conference.jpg
+header_image: private/rnd-day-2018-header.jpeg
 header_overlay: true
 category: events
 tags: ["research", "development", "rnd", "r&d", "conference"]
@@ -31,7 +31,7 @@ As in the morning, the organizers of the event and the speakers had managed to p
 
 ### The workshops
 
-After having taken in so much, the attendants of the event got a chance to get at it themselves in the final part of the day, as three workshops were provided that not only sought to teach one or the other useful skill to the audience, but also provided a glimpse of the toil developers around the world are facing each and every day: One workshop was about how to build an OAuth client, the second one introduced the basics of shell commands/scripts (bearing a name prone to one or the other [nerdy reference](https://en.wikipedia.org/wiki/Ghost_in_the_Shell){target:_blank}) and the third one gave an insight into Ansible.
+After having taken in so much, the attendants of the event got a chance to get at it themselves in the final part of the day, as three workshops were provided that not only sought to teach one or the other useful skill to the audience, but also provided a glimpse of the toil developers around the world are facing each and every day: One workshop was about how to build an OAuth client, the second one introduced the basics of shell commands/scripts (bearing a name prone to one or the other [nerdy reference](https://en.wikipedia.org/wiki/Ghost_in_the_Shell){:target="_blank"} and the third one gave an insight into Ansible.
 
 {% twitter https://twitter.com/epagesdevs/status/1039887537102381056 %}
 
