Include the suggestions into the text.

--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -1,22 +1,24 @@
 ---
 layout: post
-title: ePages RnD Day 2018
+title: ePages RnD Day 2018 - 
 date: 2018-09-18
 header_image: private/rnd-day-2018-header.jpeg
 header_overlay: true
 category: events
 tags: ["research", "development", "rnd", "r&d", "conference"]
-authors: ["Jan"]
+authors: ["Jan S."]
 about_authors: ["jschnegotzki"]
 ---
 
-Once a year, ePages offers its employees the unique opportunity to extend their knowledge of the technologies they or their colleagues use on a daily basis, speak up about things that interest them and just get to know people that normally work too far away to have met them by any other means than Google Hangouts.
-After having had to yield its slot in the ePages annual schedule to the eCommerce summit in 2017, the ePages R&D Day returned in full splendour this year.
+Once a year, ePages offers its employees the unique opportunity to extend their knowledge of the technologies they or their colleagues use on a daily basis and speak up about things that interest them.
+It was also the ideal opportunity to get to know people that normally work too far away to have met them by any other means than Google Hangouts.
+After having had to yield its slot in the ePages annual schedule to the Commerce Summit in 2017, the ePages R&D Day returned in full splendour this year.
 
 ### The morning
 
 An ample assortment of fruit, pastries and drinks provided as (second) breakfast guaranteed a nice start into the day, which then was kicked off by ePages' CTO, welcoming everybody and giving some information about what the company was up to lately.
-The first talk of the day was held by one of our scrum masters, who talked about possible dysfunctions of a team and how to overcome them, followed by a talk from the developer's point of view on the infrastructure of the next generation of ePages' software, thus offering a nice mixture of technical and organizational topics.
+The first talk of the day was held by one of our Scrum Masters, who talked about possible dysfunctions of a team and how to overcome them.
+This was followed by a talk from the developer's point of view on the infrastructure of the next generation of our software, thus offering a nice mixture of technical and organizational topics.
 
 {% twitter https://twitter.com/jensfischerhh/status/1039796203251269632 %}
 
@@ -26,8 +28,9 @@ In preparation of the talks that were to follow in the afternoon, everyone took 
 ### The afternoon
 
 While the speakers of the morning talks had enjoyed the privilege of the audience's undivided attention, gloves were off in the afternoon, as there were two or three talks held simultaneously at all times, competing to draw interested listeners in.
-The decision on what talk one was going to attend was a tough one, as all the topics covered seemed so inviting and worthy of further discussion, but in the end, an even distribution of all ePagees over the conference rooms was achieved.
-As in the morning, the organizers of the event and the speakers had managed to prepare a rich variety of topics ranging from API documentation to methods of learning new technologies, from mobile coding to company-internal technologies and much more.
+The decision on what talk one was going to attend was a tough one, as all the topics covered seemed so inviting and worthy of further discussion.
+Luckily, an even distribution of all ePagees over the conference rooms was achieved in the end.
+As in the morning, the organizers of the event and the speakers had managed to prepare a rich variety of topics ranging from API documentation and mobile coding to methods of learning new technologies and company-internal technologies.
 
 ### The workshops
 
@@ -37,5 +40,5 @@ After having taken in so much, the attendants of the event got a chance to get a
 
 ### Conclusion
 
-After a long and highly instructive day, I think everyone who had taken part in the event went home a little more knowledgeable about what happens under the hood of so many applications we have come to take for granted and a little more aware of what should be done to make working together more productive and delightful.
-And to think that this hadn't been all, because two days of the ePages (YO)U were still ahead of us!
+After a long and highly instructive day, I think everyone went home a little more knowledgeable about what happens under the hood of so many applications we have come to take for granted, and a little more aware of what should be done to make working together more productive and delightful.
+And for some, this hadn't been all, as they decided to visit one of the many nice locations around our office to grab a drink or have dinner with their favorite colleagues.
