--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ePages RnD Day 2018 - 
+title: ePages RnD Day 2018 - Talking Tech and Hanging Out
 date: 2018-09-18
 header_image: private/rnd-day-2018-header.jpeg
 header_overlay: true
