Fix ampersand problem

--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -12,7 +12,7 @@ about_authors: ["jschnegotzki"]
 
 Once a year, ePages offers its employees the unique opportunity to extend their knowledge of the technologies they or their colleagues use on a daily basis and speak up about things that interest them.
 It was also the ideal opportunity to get to know people that normally work too far away to have met them by any other means than Google Hangouts.
-After having had to yield its slot in the ePages annual schedule to the Commerce Summit in 2017, the ePages R&D Day returned in full splendour this year.
+After having had to yield its slot in the ePages annual schedule to the Commerce Summit in 2017, the ePages R&amp;D Day returned in full splendour this year.
 
 ### The morning
 
