Fix ampersand problem

--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -5,7 +5,7 @@ date: 2018-09-18
 header_image: private/rnd-day-2018-header.jpeg
 header_overlay: true
 category: events
-tags: ["research", "development", "rnd", "r&d", "conference"]
+tags: ["research", "development", "rnd", "r&amp;d", "conference"]
 authors: ["Jan S."]
 about_authors: ["jschnegotzki"]
 ---
