--- a/_posts/2018/2018-09-18-rnd-day-2018.md
+++ b/_posts/2018/2018-09-18-rnd-day-2018.md
@@ -18,7 +18,7 @@ After having had to yield its slot in the ePages annual schedule to the Commerce
 
 An ample assortment of fruit, pastries and drinks provided as (second) breakfast guaranteed a nice start into the day, which then was kicked off by ePages' CTO, welcoming everybody and giving some information about what the company was up to lately.
 The first talk of the day was held by one of our Scrum Masters, who talked about possible dysfunctions of a team and how to overcome them.
-This was followed by a talk from the developer's point of view on the infrastructure of the next generation of our software, thus offering a nice mixture of technical and organizational topics.
+This was followed by a talk from the developer's point of view on the infrastructure of our software, thus offering a nice mixture of technical and organizational topics.
 
 {% twitter https://twitter.com/jensfischerhh/status/1039796203251269632 %}
 
@@ -30,7 +30,7 @@ In preparation of the talks that were to follow in the afternoon, everyone took 
 While the speakers of the morning talks had enjoyed the privilege of the audience's undivided attention, gloves were off in the afternoon, as there were two or three talks held simultaneously at all times, competing to draw interested listeners in.
 The decision on what talk one was going to attend was a tough one, as all the topics covered seemed so inviting and worthy of further discussion.
 Luckily, an even distribution of all ePagees over the conference rooms was achieved in the end.
-As in the morning, the organizers of the event and the speakers had managed to prepare a rich variety of topics ranging from API documentation and mobile coding to methods of learning new technologies and company-internal technologies.
+As in the morning, the organizers of the event and the speakers had managed to prepare a rich variety of topics ranging from API documentation to mobile coding and methods of learning new technologies.
 
 ### The workshops
 
