--- a/_posts/2018/2018-10-19-PO-post.md
+++ b/_posts/2018/2018-10-19-PO-post.md
@@ -2,18 +2,18 @@
 layout: post
 title: Working as a Product Owner in a Scrum team
 date: 2018-09-19
-header_image: private/epages-you.jpg
+header_image: public/product-owner-post.jpeg
 header_overlay: true
 category: on-the-job
-tags: ["scrum"]
+tags: ["scrum", "product management"]
 authors: ["Kerstin"]
 about_authors: ["kdeharde"]
 ---
 We've nearly presented all Scrum roles in our company.
-Different kinds of developers, Designers, Scrum Masters - But we never spoke about Product Owners.
+Different kinds of [developers](https://developer.epages.com/blog/on-the-job/working-as-a-java-developer-at-epages/){:target="_blank"}, [Designers](https://developer.epages.com/blog/on-the-job/working-as-a-ui-designer-at-epages/){:target="_blank"}, and [Scrum Masters](https://developer.epages.com/blog/on-the-job/why-i-love-working-as-a-scrum-master/){:target="_blank"} - But we never spoke about Product Owners.
 Or as they are called here at ePages - POs.
 According to the Scrum framework, the job of a Product Owner might appear as a clear defined roles which is occupied with less obstacles than others.
-A PO, is "just" the one who defines the backlog tasks and the sprints direction.
+A PO is "just" the one who defines the backlog tasks and the sprints direction.
 But it's sometimes not as easy as this.
 There are moments in every PO's working life where they need to be the rock in the sea while actually feeling like sitting in a nutshell thrown up and down by the waves.
 But let’s have a look at this job in detail - what are the challenges POs have to deal with?
@@ -28,8 +28,8 @@ There is marketing telling them, that the feature is good but not outstanding - 
 Sales colleagues on the other hand need features to present the product as a powerful package - so the team should come up with more features in a shorter timeframe.
 And there might be a CTO who wants to see topics on the roadmap that improve the technical part of the product - but will never be directly displayed to a user.
 
-You see, in the worst case there are various opinions that would lead to different product directions.
-And the most of the time, they are more or less ALL VALID.
+As you can see, in the worst case there are various opinions that would lead to different product directions.
+And most of the time, they are more or less ALL VALID.
 So, sometimes POs need to be an octopus with people dragging on each of its nine arms and still come up with a good solution instead of a bad compromise.
 
 ## Keep the team motivated
@@ -38,21 +38,20 @@ Collaborating with the development team at eye-level in an atmosphere of trust a
 Nevertheless, there are sometimes stumbling blocks lying on the road that might complicate the communication between the Scrum team and their PO.
 
 First stumbling block: Time resources.
-According to the Scrum Framework, the PO and the development team do a sprint planning and commit to a certain range of stories, and a sprint goal that they would like to tackle.
+According to the Scrum Framework, the PO and the development team have a sprint planning and commit to a certain range of stories, and a sprint goal that they would like to tackle.
 But it's real life - so there can always occur different issues on the way to implementation and your commitment will not work out:
-Colleagues get ill, unexpected problems prevent your approach, you realize that your tasks leads to new questions that have to be solved first, ... you can imagine other reasons.
+Colleagues get ill, unexpected problems come up, the task leads to new questions that need to be solved first, ... and so on.
 But still, you have a communicated deadline you have to stick to.
 In this situation it is up to the PO to push the team and motivate it in order to stick to the deadline without burning human resources.
 This is not always an easy task.
 It’s about keeping motivation high, shifting priorities, and making concessions.
-But working under a high workload and time-pressure will only work out for a limited time period, and if the team relationship is based on trust and respect - as mentioned above.
+But working under a high workload and time pressure will only work out for a limited time period, and if the team relationship is based on trust and respect - as mentioned above.
 
 Second stumbling block: Missing perspective.
 Every team needs a perspective.
-What is the product vision?
-Is it reflected in the backlog?
-But what exactly should a PO communicate to the team and what is only deflecting them from their work?
+Questions like "What is the product vision?" and "Is it reflected in the backlog?" need to be answered.
 A PO stays in contact with many people in and outside the company and collects a bunch of information about the product and the market.
+But what exactly should a PO communicate to the team and what is only deflecting them from their work?
 Forwarding everything to the team would be as useful as not communicating anything.
 In both ways, a PO would fail in giving the team orientation.
 So, a PO needs to strike a balance in order to enable the team to create good, user-centric products.
@@ -69,8 +68,8 @@ Maybe even by planning whole days to tackle more technical tasks that are not pr
 Another important aspect: A PO should stay open-minded and try to keep a neutral perspective on the product.
 Even with a totally new project, it might only take six to ten weeks to loose this perspective.
 To be no longer open-minded and stick to internal restrictions.
-When coming across a cool new feature the first thought should never be: “Great feature, but we can’t do this in our product, because we have technical restrictions and anyway costs would be to high”.
-So, they sometimes need to push themselves and reset to zero.
+When coming across a cool new feature the first thought should never be: “Great feature, but we can’t do this in our product  because we have technical restrictions and costs would be to high”.
+So, POs sometimes need to push themselves and reset to zero.
 They need to value the benefits a feature will give to the users above the challenges to implement it.
 Sounds easy, but this can sometimes be the hardest part of the job.
 But if a PO tackles this last task, not only the product but also the personal working life will benefit.
