--- a/_posts/2018/2018-10-19-PO-post.md
+++ b/_posts/2018/2018-10-19-PO-post.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Working as a Product Owner in a Scrum team
-date: 2018-09-19
+date: 2018-10-19
 header_image: public/product-owner-post.jpeg
 header_overlay: true
 category: on-the-job
@@ -9,12 +9,12 @@ tags: ["scrum", "product management"]
 authors: ["Kerstin"]
 about_authors: ["kdeharde"]
 ---
-We've nearly presented all Scrum roles in our company.
-Different kinds of [developers](https://developer.epages.com/blog/on-the-job/working-as-a-java-developer-at-epages/){:target="_blank"}, [Designers](https://developer.epages.com/blog/on-the-job/working-as-a-ui-designer-at-epages/){:target="_blank"}, and [Scrum Masters](https://developer.epages.com/blog/on-the-job/why-i-love-working-as-a-scrum-master/){:target="_blank"} - But we never spoke about Product Owners.
-Or as they are called here at ePages - POs.
-According to the Scrum framework, the job of a Product Owner might appear as a clear defined roles which is occupied with less obstacles than others.
+We've introduced you to almost all Scrum roles in our company.
+Different roles of [developers](https://developer.epages.com/blog/on-the-job/working-as-a-java-developer-at-epages/){:target="_blank"}, our[Designers](https://developer.epages.com/blog/on-the-job/working-as-a-ui-designer-at-epages/){:target="_blank"}, and [Scrum Masters](https://developer.epages.com/blog/on-the-job/why-i-love-working-as-a-scrum-master/){:target="_blank"} - but we never talked about Product Owners, or in short - POs, until now.
+
+According to the Scrum framework, the job of a Product Owner might appear as a clearly defined role which is occupied with less obstacles than others.
 A PO is "just" the one who defines the backlog tasks and the sprints direction.
-But it's sometimes not as easy as this.
+But it's sometimes not as simple as that.
 There are moments in every PO's working life where they need to be the rock in the sea while actually feeling like sitting in a nutshell thrown up and down by the waves.
 But let’s have a look at this job in detail - what are the challenges POs have to deal with?
 And which role do they actually take over in a Scrum team?
