--- a/_posts/2018/2018-10-15-kotlinconf-2018.md
+++ b/_posts/2018/2018-10-15-kotlinconf-2018.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: KotlinConf 2018
-date: 2018-10-15
+date: 2018-10-11
 header_image: private/kotlinconf2018-venue.jpg
 header_position: center
 header_overlay: true
@@ -11,8 +11,9 @@ authors: ["Jens"]
 about_authors: ["jfischer"]
 ---
 
-I had the chance to visit Amsterdam in order to attend [KotlinConf 2018](https://kotlinconf.com/), a whole conference about maybe my most loved programming language these days: [Kotlin](https://kotlinlang.org/).
-At first I was a bit skeptical, if such a narrow topic could keep me focussed and interested for two full days, but it turned out the Kotlin ecosystem has so many facets and colourful people to not get bored at all.
+I had the chance to visit Amsterdam in order to attend [KotlinConf 2018](https://kotlinconf.com/){:target="_blank"}, a whole conference about maybe my most loved programming language these days: [Kotlin](https://kotlinlang.org/){:target="_blank"}.
+At first I was a bit skeptical, if such a narrow topic could keep me focussed and interested for two full days.
+But it turned out the Kotlin ecosystem has so many facets and colorful people to not get bored at all.
 Plus, the venue and overall organisation of the conference was really great:
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Really love the venue, organisation,... Of the <a href="https://twitter.com/hashtag/kotlinconf18?src=hash&amp;ref_src=twsrc%5Etfw">#kotlinconf18</a> <br>Catch the talks here: <a href="https://t.co/s5lhNJr9x4">https://t.co/s5lhNJr9x4</a> some are already published! <a href="https://t.co/vSXQ6THRqU">pic.twitter.com/vSXQ6THRqU</a></p>&mdash; David (@dwursteisen) <a href="https://twitter.com/dwursteisen/status/1048165287370129410?ref_src=twsrc%5Etfw">October 5, 2018</a></blockquote>
@@ -20,21 +21,21 @@ Plus, the venue and overall organisation of the conference was really great:
 
 ## The talks
 
-After a delicious breakfast and the obligatory keynote, I started my first day joining [Huyen Tue Dao](https://twitter.com/queencodemonkey)'s talk [Dissecting the stdlib](https://github.com/queencodemonkey/dissecting-the-stdlib).
-What a blast - immediately stop reading here and watch the recording of her [B-b-b-bytecode Break](https://youtu.be/Fzt_9I733Yg?t=597) interludes!
+After a delicious breakfast and the obligatory keynote, I started my first day joining [Huyen Tue Dao](https://twitter.com/queencodemonkey){:target="_blank"}'s talk [Dissecting the stdlib](https://github.com/queencodemonkey/dissecting-the-stdlib){:target="_blank"}.
+What a blast - immediately stop reading here and watch the recording of her [B-b-b-bytecode Break](https://youtu.be/Fzt_9I733Yg?t=597){:target="_blank"} interludes!
 I got away with a lot of hints and ideas of how to improve my usage of Kotlin and how to do interactive talks with live coding.
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Learned so much during <a href="https://twitter.com/queencodemonkey?ref_src=twsrc%5Etfw">@queencodemonkey</a> talking about „Dissecting the stdlib“ at <a href="https://twitter.com/hashtag/kotlinconf18?src=hash&amp;ref_src=twsrc%5Etfw">#kotlinconf18</a>. Plus great effective usage of IntelliJ even for the slides</p>&mdash; Jens Fischer (@jensfischerhh) <a href="https://twitter.com/jensfischerhh/status/1047776638166077440?ref_src=twsrc%5Etfw">October 4, 2018</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Kotlin can be used not only on the JVM ☕, but also for JavaScript or for developing native Android and iOS apps.
-The conference offered [a lot of talks](https://kotlinconf.com/schedule/) for all of these flavours, but I was kept busy keeping track of all the talks around Kotlin on the server-side (and still missed some talks due to parallel schedules).
+The conference offered [a lot of talks](https://kotlinconf.com/schedule/){:target="_blank"} for all of these flavours, but I was kept busy keeping track of all the talks around Kotlin on the server-side (and still missed some talks due to parallel schedules).
 
-Other highlights of my first day at KotlinConf include [Type-safe build logic with the Gradle Kotlin DSL](https://eskatos.github.io/kotlinconf2018-type-safe-build-logic/#/) by [Hans Dockter](https://twitter.com/hans_d) & [Paul Merlin](https://twitter.com/eskat0s), [GraphQL powered by Kotlin](http://adavis.info/2018/06/talk-getting-a-grip-on-graphql.html) by [Annyce Davis](https://twitter.com/brwngrldev), and [The Kotlin Type Hierarchy from top to bottom](https://speakerdeck.com/npryce/the-kotlin-type-hierarchy-from-top-to-bottom) by [Nat Pryce](https://twitter.com/natpryce).
+Other highlights of my first day at KotlinConf include [Type-safe build logic with the Gradle Kotlin DSL](https://eskatos.github.io/kotlinconf2018-type-safe-build-logic/#/){:target="_blank"} by [Hans Dockter](https://twitter.com/hans_d){:target="_blank"} & [Paul Merlin](https://twitter.com/eskat0s){:target="_blank"}, [GraphQL powered by Kotlin](http://adavis.info/2018/06/talk-getting-a-grip-on-graphql.html){:target="_blank"} by [Annyce Davis](https://twitter.com/brwngrldev){:target="_blank"}, and [The Kotlin Type Hierarchy from top to bottom](https://speakerdeck.com/npryce/the-kotlin-type-hierarchy-from-top-to-bottom){:target="_blank"} by [Nat Pryce](https://twitter.com/natpryce){:target="_blank"}.
 I can directly apply lessons learned from these talks in my daily work at ePages.
 
-Expect recordings of these and most of the other talks to show up on [JetBrains' YouTube channel](https://www.youtube.com/playlist?list=PLQ176FUIyIUbVvFMqDc2jhxS-t562uytr) in a couple of days.
-Until then, [Jeroen Mols](https://twitter.com/@molsjeroen) already compiled a [nice list of slides](https://jeroenmols.com/blog/2018/10/05/kotlinconf18/).
+Expect recordings of these and most of the other talks to show up on [JetBrains' YouTube channel](https://www.youtube.com/playlist?list=PLQ176FUIyIUbVvFMqDc2jhxS-t562uytr){:target="_blank"} in a couple of days.
+Until then, [Jeroen Mols](https://twitter.com/@molsjeroen){:target="_blank"} already compiled a [nice list of slides](https://jeroenmols.com/blog/2018/10/05/kotlinconf18/){:target="_blank"}.
 
 After the last talks of the first day, the venue turned into a party area with a selection of vintage arcade machines 🕹️ and a Queen tribute band 🎶 entertaining the participants drinking original Heineken beer 🍻.
 
@@ -49,7 +50,7 @@ After the last talks of the first day, the venue turned into a party area with a
 Half of the talks I attended during the first day where presented by female speakers.
 Compared to other conferences I visited before, this is already a great ratio!
 But KotlinConf was able to make an even bigger impression on me at day two.
-They invited [Alicia Carr](https://twitter.com/fineblkwoman) to give her keynote [I am a developer at 54](https://www.aliciavcarr.com/the-speaker/) - where she didn't talk a single word about Kotlin, but instead told her story of becoming a self-taught iOS app developer as an African American woman without any tech background.
+They invited [Alicia Carr](https://twitter.com/fineblkwoman){:target="_blank"} to give her keynote [I am a developer at 54](https://www.aliciavcarr.com/the-speaker/){:target="_blank"} - where she didn't talk a single word about Kotlin, but instead told her story of becoming a self-taught iOS app developer as an African American woman without any tech background.
 She also raised awareness for the role of technology in domestic violence and how her app is helping victims in the US.
 I really appreciate talks of this kind to reflect where we as an industry stand and what our responsibilities as software developers are.
 Kudos, KotlinConf!
@@ -57,18 +58,18 @@ Kudos, KotlinConf!
 ## What are these coroutines everybody is talking about?
 
 You could hear the term "coroutines" everywhere during day two of the conference.
-Since I had hardly any prior experience using them, I was happy to attend [Venkat Subramaniam](https://twitter.com/venkat_s) talking about [Exploring Coroutines in Kotlin](https://youtu.be/jT2gHPQ4Z1Q ) ([📦](http://agiledeveloper.com/presentations/exploring_coroutines_in_kotlin.zip)).
+Since I had hardly any prior experience using them, I was happy to attend [Venkat Subramaniam](https://twitter.com/venkat_s){:target="_blank"} talking about [Exploring Coroutines in Kotlin](https://youtu.be/jT2gHPQ4Z1Q){:target="_blank"} ([📦](http://agiledeveloper.com/presentations/exploring_coroutines_in_kotlin.zip){:target="_blank"}).
 As he is a well-known speaker, I had high expectations of his talk - and I was still blown away by his speed of talking, depth of knowledge, live coding skills and multiple brains delivering the content and debugging unexpected problems in his example program in parallel.
-I was so enchanted by his talk, that I couldn't miss his second performance that afternoon: "Creating Internal DSLs in Kotlin" ([📦](http://agiledeveloper.com/presentations/creating_internal_dsls_in_kotlin.zip)).
+I was so enchanted by his talk, that I couldn't miss his second performance that afternoon: "Creating Internal DSLs in Kotlin" ([📦](http://agiledeveloper.com/presentations/creating_internal_dsls_in_kotlin.zip){:target="_blank"}).
 Again, he delivered on the same level plus injecting a lot of jokes this time.
 If you ever have the chance to see him presenting, don't miss that opportunity!
 
-Other notable talks that will surely have an impact on my Kotlin usage were [Building Server Backends with Ktor](https://speakerdeck.com/rharter/servers-kotlin) by [Ryan Harter](https://twitter.com/rharter) and [Philipp Hauer](https://twitter.com/philipp_hauer)'s [Best Practices for Unit Testing in Kotlin](https://blog.philipphauer.de/best-practices-unit-testing-kotlin/).
+Other notable talks that will surely have an impact on my Kotlin usage were [Building Server Backends with Ktor](https://speakerdeck.com/rharter/servers-kotlin){:target="_blank"} by [Ryan Harter](https://twitter.com/rharter){:target="_blank"} and [Philipp Hauer](https://twitter.com/philipp_hauer){:target="_blank"}'s [Best Practices for Unit Testing in Kotlin](https://blog.philipphauer.de/best-practices-unit-testing-kotlin/){:target="_blank"}.
 
 ## It's a wrap!
 
-The conference ended with what will surely become a tradition as seen in the Java community: [Kotlin puzzlers, vol 2](https://youtu.be/Xq9vBZs0j-8) moderated by "Captain" [Anton Keks](https://twitter.com/antonkeks).
-Go see if you can [solve these brain teasers](https://github.com/angryziber/kotlin-puzzlers/tree/master/kotlinconf2018) yourself!
+The conference ended with what will surely become a tradition as seen in the Java community: [Kotlin puzzlers, vol 2](https://youtu.be/Xq9vBZs0j-8){:target="_blank"} moderated by "Captain" [Anton Keks](https://twitter.com/antonkeks){:target="_blank"}.
+Go see if you can [solve these brain teasers](https://github.com/angryziber/kotlin-puzzlers/tree/master/kotlinconf2018){:target="_blank"} yourself!
 After the closing words from the organisers, a happy Kotlin community started their trip back home.
 At least most of them, because I could spot one or the other blue Kotlin hoodie the next days in Amsterdam while extending my stay in this beautiful city.
 This conference was a total success and I already look forward to KotlinConf 2019.
