--- a/_posts/2018/2018-10-15-kotlinconf-2018.md
+++ b/_posts/2018/2018-10-15-kotlinconf-2018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: KotlinConf 2018
+title: Krazy KotlinKonf 2018 in Amsterdam
 date: 2018-10-11
 header_image: private/kotlinconf2018-venue.jpg
 header_position: center
