--- a/_posts/2016/2016-09-01-socrates.md
+++ b/_posts/2016/2016-09-01-socrates.md
@@ -6,6 +6,7 @@ header_image: public/craftsmanship.jpg
 category: events
 tags: ["conference", "git", "monitoring", "java", "testing"]
 authors: ["Benjamin", "Oliver Z."]
+about_authors: ["bnothdurft", "ozscheyge"]
 ---
 
 From the 25th until the 28th of August 2016 the 6th International [Software Craftsmanship and Testing Conference (SoCraTes)](https://www.socrates-conference.de/){:target="_blank"} took place in Soltau, Germany.
