Add authors to blog posts

--- a/_posts/2015/2015-11-27-seokomm-2015.md
+++ b/_posts/2015/2015-11-27-seokomm-2015.md
@@ -6,6 +6,7 @@ header_image: private/seokomm.jpg
 category: events
 tags: ["seo", "web technology", "conference"]
 authors: ["Björn"]
+about_authors: ["broddeck"]
 ---
 
 The sixth [SEOkomm](http://www.seokomm.at/){:target="_blank"} recently took place in Salzburg, Austria.
